<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".InputActivity">

    <!-- Overview category -->
    <LinearLayout
        android:id="@+id/input_data"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="16dp"
                    android:text="@string/age_field"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorAccent" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp">

                    <EditText
                        android:id="@+id/age_field_edit_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/hint_age"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textAppearance="?android:textAppearanceMedium" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="16dp"
                    android:text="@string/weight_field"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorAccent" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp">

                    <EditText
                        android:id="@+id/weight_field_edit_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/hint_weight"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textAppearance="?android:textAppearanceMedium" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="16dp"
                    android:text="@string/sex_field"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorAccent" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp">


                    <!-- Input field -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- Sex drop-down spinner -->
                        <Spinner
                            android:id="@+id/spinner_sex"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:spinnerMode="dropdown"
                            android:textAllCaps="true"
                            android:textAppearance="?android:textAppearanceMedium" />
                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="16dp"
                    android:text="@string/height_field"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorAccent" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp">

                    <EditText
                        android:id="@+id/height_field_edit_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/hint_height"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textAppearance="?android:textAppearanceMedium" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="16dp"
                    android:text="@string/initial_rate_field"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorAccent" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp">

                    <EditText
                        android:id="@+id/initial_rate_field_edit_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/hint_initial_heart_rate"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textAppearance="?android:textAppearanceMedium" />
                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="right"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/start_button"
        android:textColor="@android:color/white" />

</LinearLayout>
