<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".ResultActivity">

    <!-- Overview category -->

    <LinearLayout
        android:id="@+id/result_data"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="16dp"
                    android:text="@string/mpc_field"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorAccent" />


                <TextView
                    android:id="@+id/moc_field_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceMedium"
                    tools:text="45" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="16dp"
                    android:text="@string/ap_field"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorAccent" />


                <TextView
                    android:id="@+id/ap_field_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="16dp"
                    android:text="@string/ap_hr_field"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/ap_hr_field_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceMedium" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="16dp"
                    android:text="@string/initial_rate_field"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorAccent" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp">

                    <EditText
                        android:id="@+id/final_rate_field_edit_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/hint_final_heart_rate"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textAppearance="?android:textAppearanceMedium" />
                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/result_button"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="right"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/result_button"
        android:textColor="@android:color/white" />


</LinearLayout>
